feat: Ajout de la possibilité de suivre d'autres utilisateur et de voir leur bibliothèque

--- a/frontend/src/scss/_content.scss
+++ b/frontend/src/scss/_content.scss
@@ -184,6 +184,10 @@ main {
     @import "./pages/contact.scss";
   }
 
+  &#followed {
+    @import "./pages/followed.scss";
+  }
+
   &#additional-pages {
     font-size: 2rem;
     padding: 8rem 0;
